# nl2sql-snowflake-ai

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  index_schema.py  main.py  pyproject.toml  requirements.txt  z_notes.py
.github/workflows/: secure-ci.yml
src/: app.py  config.py
src/graph/: graph.py
src/guardrails/: cost.py  sql_guard.py
src/llm/: factory.py
src/memory/: store.py
src/nodes/: clarify.py  enrich.py  execute.py  extract_enrichment_spec.py  followup.py  intent.py  plan.py  plan_with_enrichments.py  query_mode.py  repair.py  respond.py  validate.py
src/pii/: mask.py
src/prompts/: __init__.py  clarify.py  enrichment.py  extract_enrichment_spec.py  intent_router.py  plan_sql.py  plan_sql_with_enrichments.py  query_mode_router.py  repair_sql.py  rewrite_followup.py
src/pydantic/: prompt_validate.py
src/retriever/: retrieve.py  schema_index.py
src/snowflake/: client.py
src/utils/: enrichment.py  logging.py
